// Prisma schema for Tag a Long

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                String              @id @default(uuid())
  email             String              @unique
  phone             String?
  password_hash     String
  display_name      String
  username          String              @unique
  bio               String?
  profile_photo_url String?
  photo_gallery     String[]            @default([])
  city              String
  instagram_handle  String?
  date_of_birth     DateTime
  is_active         Boolean             @default(true)
  token_version     Int                 @default(0)
  created_at        DateTime            @default(now())
  last_active       DateTime            @default(now())

  listings          Listing[]
  requests          TagAlongRequest[]   @relation("Requester")
  password_reset    PasswordResetToken?
  notifications     Notification[]
  fcm_tokens        FcmToken[]
  conversations1    Conversation[]      @relation("ConversationUser1")
  conversations2    Conversation[]      @relation("ConversationUser2")
  messages          Message[]

  @@index([city])
  @@index([username])
  @@map("users")
}

model Listing {
  id               String              @id @default(uuid())
  user_id          String
  photo_url        String?
  title            String
  caption          String?
  description      String?
  category         String?
  location         String?
  date             DateTime?
  time             String?
  time_text        String?
  max_participants Int?
  tagged_users     String[]            @default([])
  city             String
  latitude         Float?
  longitude        Float?
  is_active        Boolean             @default(true)
  view_count       Int                 @default(0)
  created_at       DateTime            @default(now())
  expires_at       DateTime

  user        User                @relation(fields: [user_id], references: [id], onDelete: Cascade)
  requests    TagAlongRequest[]

  @@index([city, is_active, created_at])
  @@index([user_id, created_at])
  @@index([expires_at])
  @@index([category])
  @@map("listings")
}

model TagAlongRequest {
  id            String    @id @default(uuid())
  listing_id    String
  requester_id  String
  status        String    @default("pending")
  created_at    DateTime  @default(now())
  responded_at  DateTime?

  listing       Listing   @relation(fields: [listing_id], references: [id], onDelete: Cascade)
  requester     User      @relation("Requester", fields: [requester_id], references: [id], onDelete: Cascade)

  @@unique([listing_id, requester_id])
  @@index([listing_id, status])
  @@index([requester_id, status])
  @@map("tag_along_requests")
}

model Notification {
  id         String    @id @default(uuid())
  user_id    String
  type       String
  title      String
  body       String
  data       String?
  is_read    Boolean   @default(false)
  created_at DateTime  @default(now())

  user       User      @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@index([user_id, is_read, created_at])
  @@map("notifications")
}

model FcmToken {
  id          String   @id @default(uuid())
  user_id     String
  token       String
  device_type String?
  created_at  DateTime @default(now())

  user        User     @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([user_id, token])
  @@map("fcm_tokens")
}

model Conversation {
  id           String    @id @default(uuid())
  participant1 String
  participant2 String
  created_at   DateTime  @default(now())
  updated_at   DateTime  @updatedAt

  user1        User      @relation("ConversationUser1", fields: [participant1], references: [id], onDelete: Cascade)
  user2        User      @relation("ConversationUser2", fields: [participant2], references: [id], onDelete: Cascade)
  messages     Message[]

  @@unique([participant1, participant2])
  @@index([participant1])
  @@index([participant2])
  @@map("conversations")
}

model Message {
  id              String       @id @default(uuid())
  conversation_id String
  sender_id       String
  content         String
  is_read         Boolean      @default(false)
  created_at      DateTime     @default(now())

  conversation    Conversation @relation(fields: [conversation_id], references: [id], onDelete: Cascade)
  sender          User         @relation(fields: [sender_id], references: [id], onDelete: Cascade)

  @@index([conversation_id, created_at])
  @@index([sender_id])
  @@map("messages")
}

model PasswordResetToken {
  id         String   @id @default(uuid())
  user_id    String   @unique
  token_hash String
  expires_at DateTime
  created_at DateTime @default(now())

  user       User     @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@map("password_reset_tokens")
}
